branches/wip/Archive/2bd72dfea88fbca8de61c974459ff547-4633dfbb9751bd61e16305d67167e3f8/output
+ g++-4.8 -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In constructor ‘Wrap::Wrap(Wrap&&)’:
main.cpp:18:48: error: expression list treated as compound expression in mem-initializer [-fpermissive]
     Wrap(Wrap&& wrap) : id(destroy(id), wrap.id) { wrap.id = 0; }
                                                ^
